<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="60dp"
    android:background="@drawable/bg1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="50dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="50dp"
        android:layout_below="@id/username"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/reepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retype_password"
        android:layout_marginTop="50dp"
        android:layout_below="@id/password"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="50dp"
        android:layout_below="@id/reepassword"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:backgroundTint="#2BAFBF"/>
    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/existing_uesr_go_to_signin_page"
        android:layout_marginTop="50dp"
        android:backgroundTint="#2BAFBF"
        android:onClick="loginActivity"
        android:layout_below="@id/btnsignup"/>




</RelativeLayout>