<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".phase1"
    android:background="@drawable/background2">


    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="326dp"
        android:backgroundTint="#2196F3"
        android:onClick="subtraction"
        android:text="@string/level2" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="214dp"
        android:backgroundTint="#2196F3"
        android:onClick="addition"
        android:text="@string/level1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="423dp"
        android:backgroundTint="#2196F3"
        android:onClick="multiplication"
        android:text="@string/level3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="539dp"
        android:backgroundTint="#2196F3"
        android:onClick="division"
        android:text="@string/level4" />


</RelativeLayout>